# platform.core.system.libtracker

./: CMakeLists.txt  tracker.pc.in
include/: tracker.h  tracker_private.h
packaging/: libtracker.spec
src/: power_lock.c  services.c  tracker.c
