CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(${LIBNAME} C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LIBDIR ${LIB_INSTALL_DIR})
SET(INCLUDEDIR "${PREFIX}/include/lib${LIBNAME}")
SET(PC_NAME ${LIBNAME})
SET(PC_LDFLAGS ${LIBNAME})

SET(INC_DIR include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${INC_DIR})

SET(PKG_MODULES
	capi-base-common
	dlog
	glib-2.0
)

SET(SRCS
	src/tracker.c
)

SET(HEADERS
	${INC_DIR}/tracker.h
)

INCLUDE(FindPkgConfig)
pkg_check_modules(${LIBNAME} REQUIRED ${PKG_MODULES})

FOREACH(flag ${${LIBNAME}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Wall -Werror -fvisibility=hidden")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${LIBNAME} ${${LIBNAME}_LDFLAGS} "-ldl")

SET_TARGET_PROPERTIES(${LIBNAME}
	PROPERTIES
	VERSION ${FULLVER}
	SOVERSION ${MAJORVER}
	CLEAN_DIRECT_OUTPUT 1
)

INSTALL(TARGETS ${LIBNAME} DESTINATION ${LIB_INSTALL_DIR} COMPONENT RuntimeLibraries)

CONFIGURE_FILE(${LIBNAME}.pc.in ${LIBNAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(DIRECTORY ${INC_DIR}/ DESTINATION include/lib${LIBNAME}
		FILES_MATCHING
		PATTERN "*_private.h" EXCLUDE
		PATTERN "${INC_DIR}/*.h"
)
